--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -264,130 +264,83 @@ ru:
 
 
 
-  admin:
-    home:
-      name: "Главная"
+  active_admin:
+    dashboard: Главная
+    dashboard_welcome:
+      welcome: "Добро пожаловать. Это стандартная страница управления сайтом."
+      call_to_action: "Приятной работы!"
+    view: "Открыть"
+    edit: "Изменить"
+    delete: "Удалить"
+    delete_confirmation: "Вы уверены, что хотите удалить это?"
+    new_model: "Создать %{model}"
+    create_model: "Создать %{model}"
+    edit_model: "Изменить %{model}"
+    update_model: "Изменить %{model}"
+    delete_model: "Удалить %{model}"
+    details: "%{model} подробнее"
+    cancel: "Отмена"
+    empty: "Пусто"
+    previous: "Пред."
+    next: "След."
+    download: "Загрузка:"
+    has_many_new: "Добавить %{model}"
+    has_many_delete: "Удалить"
+    filter: "Фильтровать"
+    clear_filters: "Очистить"
+    search_field: "Искать по %{field}"
+    equal_to: "="
+    greater_than: "больше"
+    less_than: "меньше"
+    main_content: "Создайте %{model}#main_content для отображения содержимого."
+    logout: "Выйти"
+    powered_by: "Powered by %{active_admin} %{version}"
+    sidebars:
+      filters: "Фильтры"
     pagination:
-      previous: "&laquo; Предыдущая"
-      next: "Следующая &raquo;"
-      truncate: "…"
-    misc:
-      search: "Поиск"
-      filter: "Фильтрация"
-      refresh: "Обновить"
-      show_all: "Показать все"
-      add_filter: "Добавить фильтр..."
-      bulk_menu_title: "Выбранные элементы..."
-      remove: "Убрfnm"
-      add_new: "Добавить новый"
-      chosen: "Выборать %{name}"
-      chose_all: "Выборать все"
-      clear_all: "Убрать выделение"
-      up: "Вверх"
-      down: "Вниз"
-      navigation: "Навигация"
-      log_out: "Выйти"
-      ago: "назад"
-    flash:
-      successful: "%{name} был %{action}"
-      error: "Не получилось %{action} %{name}"
-      noaction: "Никаких изменений не выполнено"
-      model_not_found: "Модель '%{model}' не найден"
-      object_not_found: "Объект %{model} с id '%{id}' не найден"
-    table_headers:
-      model_name: "Название модели"
-      last_used: "Последнее раз использовалось"
-      records: "Записи"
-      username: "Пользователь"
-      changes: "Изменения"
-      created_at: "Дата/Время"
-      item: "Элемент"
-      message: "Сообщение"
-    actions:
-      dashboard:
-        title: "Управление сайтом"
-        menu: "Контрольная панель"
-        breadcrumb: "панель"
-      index:
-        title: "Список %{model_label_plural}"
-        menu: "Список"
-        breadcrumb: "%{model_label_plural}"
-      show:
-        title: "Детали %{model_label} '%{object_label}'"
-        menu: "Просмотр"
-        breadcrumb: "%{object_label}"
-      show_in_app:
-        menu: "Показать в приложении"
-      new:
-        title: "Новый %{model_label}"
-        menu: "Создание"
-        breadcrumb: "новый"
-        link: "Добавить новый %{model_label}"
-        done: "создано"
-      edit:
-        title: "Редактировение %{model_label} '%{object_label}'"
-        menu: "Редактирование"
-        breadcrumb: "редактирование"
-        link: "Редактировать %{model_label}"
-        done: "сохранено"
-      delete:
-        title: "Удаление %{model_label} '%{object_label}'"
-        menu: "Удаление"
-        breadcrumb: "удаление"
-        link: "Удалить '%{object_label}'"
-        done: "удалено"
-      bulk_delete:
-        title: "Удалить много %{model_label_plural}"
-        menu: "Мульти-удаление"
-        breadcrumb: "мульти-удаление"
-        bulk_link: "Удалить выбранные %{model_label_plural}"
-      export:
-        title: "Экспорт %{model_label}"
-        menu: "Экспорт"
-        breadcrumb: "экспорт"
-        link: "Экспорт найденных %{model_label_plural}"
-        bulk_link: "Экспорт выбраных %{model_label_plural}"
-        done: "экспортировано"
-      history_index:
-        title: "История для %{model_label_plural}"
-        menu: "История"
-        breadcrumb: "история"
-      history_show:
-        title: "История для %{model_label} '%{object_label}'"
-        menu: "История"
-        breadcrumb: "история"
-    form:
-      cancel: "Отмена"
-      basic_info: "Основное"
-      required: "Требуемое"
-      optional: "Необязательное"
-      one_char: "символ"
-      char_length_up_to: "длина не более"
-      char_length_of: "длина"
-      save: "Сохранить"
-      save_and_add_another: "Сохранить и добавить новый"
-      save_and_edit: "Сохранить и продолжить редактирование"
-      all_of_the_following_related_items_will_be_deleted: "Следующие объекты будут удалены:"
-      are_you_sure_you_want_to_delete_the_object: "Вы уверены что хотите удалить %{model_name}"
-      confirmation: "Да, уверен"
-      delete_confirmation: "Подтвердить удаление"
-      bulk_delete: "Следующие объекты будут удалены, что может сломать связи с другими объектами:"
-    export:
-      confirmation: "Экспортировать как %{name}"
-      select: "Выберите поля для экспорта"
-      fields_from: "Поля из %{name}"
-      fields_from_associated: "Поля из ассоциированной %{name}"
-      display: "Показать %{name}: %{type}"
-      options_for: "Настройки для %{name}"
-      empty_value_for_associated_objects: "<пусто>"
-      click_to_reverse_selection: 'Обратить выделение'
-      csv:
-        header_for_root_methods: "%{name}" # 'model' is available
-        header_for_association_methods: "%{name} [%{association}]"
-        encoding_to: "Декодировать как"
-        encoding_to_help: "Выберите результирующую кодировку. Оставьте пустой, чтобы оставить исходную кодировку нетронутой: (%{name})"
-        skip_header: "Без заголовка"
-        skip_header_help: "Не выводить заголовок (без описаний полей)"
-        default_col_sep: ","
-        col_sep: "Разделитель столбцов"
-        col_sep_help: "Оставьте пустым, чтобы было по умолчанию ('%{value}')" # value is default_col_sep
+      empty: "%{model} не найдено"
+      one: "Результат: <b>1</b> %{model}"
+      one_page: "Результат: <b>%{n}</b> %{model}"
+      multiple: "Результат: %{model} <b>%{from}&nbsp;-&nbsp;%{to}</b> из <b>%{total}</b>"
+      entry:
+        one: "запись"
+        other: "записей"
+    any: "Любой"
+    blank_slate:
+      content: "Пока нет %{resource_name}."
+      link: "Создать"
+    batch_actions:
+      button_label: "Групповые операции"
+      delete_confirmation: "Вы уверены, что хотите удалить %{plural_model}? Вы не сможете это отменить."
+      succesfully_destroyed:
+        one: "Успешно удалено: 1 %{model}"
+        other: "Успешно удалено: %{count} %{plural_model}"
+      selection_toggle_explanation: "(Отметить всё / Снять выделение)"
+      link: "Создать"
+      action_label: "%{title} выбранное"
+      labels:
+        destroy: "Удалить"
+    comments:
+      body: "Текст"
+      author: "Автор"
+      title: "Комментарий"
+      add: "Добавить Комментарий"
+      resource: "Ресурс"
+      no_comments_yet: "Пока нет комментариев."
+      title_content: "Комментарии (%{count})"
+      errors:
+        empty_text: "Комментарий не сохранен, текст не должен быть пустым."
+    devise:
+      login:
+        title: "Войти"
+        remember_me: "Запомнить меня"
+        submit: "Войти"
+      reset_password:
+        title: "Забыли пароль?"
+        submit: "Сбросить пароль"
+      change_password:
+        title: "Изменение пароля"
+        submit: "Изменение пароля"
+      links:
+        sign_in: "Войти"
+        forgot_your_password: "Забыли пароль?"
